# olea

./: .gitignore  Cargo.toml  Dockerfile.init  Dockerfile.kernel  Dockerfile.main  Dockerfile.utils  README.md  build.sh
.cargo/: config.toml
demo/: hello  hello_2.c  raw_hello  raw_hello.c
src/: console.rs  consts.rs  errno.rs  error.rs  format.rs  init.rs  io.rs  lib.rs  logging.rs  macros.rs  main.rs
src/arch/: mod.rs  x86.rs
src/arch/kernel/: mod.rs
src/arch/kernel/boot/: entry.rs  init.rs  mod.rs
src/arch/kernel/calls/: handler.rs  mod.rs  transition.rs
src/arch/kernel/descriptors/: global.rs  interrupts.rs  mod.rs
src/arch/kernel/devices/: mod.rs  serial.rs  timer.rs  vga.rs
src/arch/kernel/interrupts/: exceptions.rs  handlers.rs  hardware.rs  mod.rs
src/arch/memory/: mod.rs  paging.rs  physical.rs  virtual.rs
src/arch/x86/: mod.rs
src/call/: exit.rs  invalid.rs  mod.rs  nothing.rs  write.rs
src/collections/: mod.rs
src/file/: descriptor.rs  error.rs  handle.rs  initial.rs  initrd.rs  mod.rs  standard.rs  types.rs  vfs.rs  virtual.rs
src/file/descriptor/: mod.rs  stdio.rs
src/file/vfs/: descriptor.rs  error.rs  handle.rs  mod.rs  standard.rs  system.rs  types.rs
src/fs/: initrd.rs  vfs.rs
src/invoke/: exit.rs  invalid.rs  mod.rs  nothing.rs  write.rs
src/memory/: buddy.rs  freelist.rs  linked_list.rs  mod.rs
src/mm/: buddy.rs  freelist.rs  mod.rs
src/scheduler/: error.rs  mod.rs  scheduler.rs  task.rs
src/sync/: lock.rs  mod.rs  mutex.rs  spinlock.rs
src/syscall/: exit.rs  invalid.rs  write.rs
(+51 files in other folders)
