[package]
name = "init"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "1.0.0-alpha.1" }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1
panic = "abort"  # Minimize size by not including backtrace support
strip = true     # Strip symbols from binary