[package]
name = "olea"
version = "0.1.0"
license = "MIT/Apache-2.0"
edition = "2021"

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-display", "none", "-smp", "1", "-m", "256M", "-serial", "stdio", "-cpu", "qemu64,apic,fsgsbase,rdtscp,xsave,xsaveopt,fxsr", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-drive", "format=raw,file={}"]
run-args = []

[features]
default = ["qemu-exit"]
vga = []

[dependencies]
bitflags = { version = "2.8" }
qemu-exit = { version = "3.0", optional = true }
x86 = { version = "0.52", default-features = false }
cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "x86_64")'.dependencies.bootloader]
version = "0.9.29"
default-features = false
features = ["recursive_page_table"]

[dependencies.goblin]
version = "0.9"
default-features = false
features = ["elf64", "elf32", "endian_fd"]
